# twitch_api

./: Cargo.toml  LICENSE.txt
.github/workflows/: build.yml
src/: client.rs  error.rs  lib.rs  models.rs  types.rs
src/helix/: endpoints.rs  mod.rs  models.rs
src/helix/namespaces/: auth.rs  clips.rs  mod.rs  users.rs  videos.rs
src/kraken/: endpoints.rs  mod.rs  models.rs
src/kraken/namespaces/: mod.rs  users.rs
src/namespace/: auth.rs
src/sync/: barrier.rs  mod.rs  waiter.rs
tests/: helix.rs
tests/common/: mod.rs
twitch_api/: Cargo.toml
twitch_api/examples/: stream_stats.rs
twitch_api/src/: client.rs  error.rs  lib.rs  models.rs
twitch_api/src/helix/: limiter.rs  mod.rs  models.rs
twitch_api/src/helix/namespaces/: auth.rs  channels.rs  clips.rs  mod.rs  streams.rs  users.rs  videos.rs
twitch_api/src/kraken/: mod.rs  models.rs
twitch_api/src/kraken/namespaces/: clips.rs  users.rs
twitch_api/src/namespace/: auth.rs
twitch_api/src/sync/: barrier.rs  mod.rs  waiter.rs
twitch_api/tests/: auth_test.rs  kraken.rs  mod.rs
twitch_api/tests/common/: mock_client.rs  mod.rs  twitch_cli.rs
twitch_types/: Cargo.toml
twitch_types/src/: lib.rs
