[package]
name = "twitch_api"
version = "0.0.32"
authors = ["David Blajda <blajda@hotmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
futures = "0.1.25"
tokio = "0.1.13"
dotenv = "0.13.0"
serde = "1.0.81"
serde_json = "1.0.33"
serde_derive = "1.0.81"
chrono = { version = "0.4.6", features = ["serde"]}
url = "1.7.2"
url_serde = "0.2.0"
futures-timer = "0.1.1"
