[package]
name = "twitch_api"
version = "0.0.321"
authors = ["David Blajda <blajda@hotmail.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.16", features = ["client",  "http2", "http1", "tcp"] }
hyper-tls = "0.5.0"
futures = { version = "0.3.19", features = ["compat"] }
tokio = { version = "1.15.0", features = ["full"] }
dotenv = "0.13.0"
log = "0.4.5"
env_logger = "0.6.0"
serde = "1.0.81"
serde_json = "1.0.33"
serde_derive = "1.0.81"
chrono = { version = "0.4.6", features = ["serde"]}
url = "1.7.2"
url_serde = "0.2.0"
futures-timer = "0.1.1"
twitch_types = { version = "0.0.1", path = "../twitch_types" }

[dev-dependencies]
serial_test = "0.7.0"

[[example]]
name = "stream_stats"